# Filebin.py

./: README.md  pyproject.toml  requirements.txt  setup.py  test.py
Filebin/: Errors.py  __init__.py
